--- a/index.html
+++ b/index.html
@@ -4,13 +4,131 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Nia's Portfolio</title>
+  <!--Bootstrap & Font links-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous"> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
+<!--Home Page-->
 <body>
-  Hello world
+  <!--Top of the page things-->
+  <div class="nav-bar">
+    <div id="nav-barL">
+      <button>
+        <a href="index.html">Home</a>
+      </button> 
+      <button>
+        <a href="about me.html">About me</a>
+      </button>
+    </div>
+    <div id="logo">Placeholder for logo</div> 
+    <div id="nav-barR">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="projects.html">Project 1</a></li>
+          <li><a class="dropdown-item" href="projects.html">Project 2</a></li>
+          <li><a class="dropdown-item" href="projects.html">Project 3</a></li>
+          <li><a class="dropdown-item" href="projects.html">Project 4</a></li>
+        </ul>
+      </div>
+      <button>
+      <a href="contact.html">Let's Chat</a>
+      </button>
+    </div>
+  </div>
+
+  <h2 id="Welcome"> Welcome!    
+  <p>Ready for a journey?</p></h2>
+  
+
+
+  
+  <!--Mid section of the page-->
+  <div class="mid-section">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="https://i.pinimg.com/736x/16/67/90/1667909f2b8d55946b1424338eec255e.jpg" class="card-img-top" alt="Cat with headphones">      
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="https://i.pinimg.com/736x/7b/2a/fb/7b2afbbf6b8999932bb576a46ece595b.jpg" class="card-img-top" alt="Cat playing with yarn">      
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="https://i.pinimg.com/736x/58/48/db/5848db67fcc81cd869417ffbf2165bb9.jpg" alt="Party Cat">        
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="https://i.pinimg.com/736x/56/c8/08/56c80840a4bfd6c8e62de8e7a76627b0.jpg" class="card-img-top" alt="Sleeping cat">
+        </div>
+      </div>
+    </div>
+
+    <h3>Space for paragraph explaining my introduction to my coding journey</h3>  
+  </div>
+
+
+  
+
+  <!--Bottom section of the page-->
+  <div class="card-group">
+    <div class="card">
+      <img src="https://i.pinimg.com/736x/ea/36/02/ea3602f22c0df7b1317456f7584459ef.jpg" class="card-img-top" alt="..."> <!--Placeholder Image-->
+      <div class="card-body">
+        <h5 class="card-title">Project 1: Placeholder Name😍</h5>
+        <p class="card-text">Small description of the project</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://i.pinimg.com/736x/9c/6b/81/9c6b81d16a164b1dd48e30c73de0c9fa.jpg" class="card-img-top" alt="..."> <!--Placeholder Image-->
+      <div class="card-body">
+        <h5 class="card-title">Project 2: Placeholder Name😍</h5>
+        <p class="card-text">Small description of the project</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://i.pinimg.com/736x/87/46/f9/8746f9646c0f5436e5bd5804f6a51a31.jpg" class="card-img-top" alt="..."> <!--Placeholder Image-->
+      <div class="card-body">
+        <h5 class="card-title">Project 3: Placeholder Name😍</h5>
+        <p class="card-text">Small description of the project</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://i.pinimg.com/736x/14/20/fd/1420fdb2c1b84a55bc9a61e3050b0fa5.jpg" class="card-img-top" alt="..."> <!--Placeholder Image-->
+      <div class="card-body">
+        <h5 class="card-title">Project 4: Placeholder Name😍</h5>
+        <p class="card-text">Small description of the project</p>
+      </div>
+    </div>
+  </div>
+  
+  <br>
+  <div class="mini-nav2">
+    <div id="visibility">
+      <button id="mode">Dark Mode</button>
+    </div>
+    <div id="search-button">
+      <button id="looking">Looking for something?</button>
+      <button id="s-icon">🔍︎</button>  
+    </div>         
+  </div>
+
+
+
+
+  
   <script src="script.js"></script>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
