Added a new page for the brand kit

--- a/index.html
+++ b/index.html
@@ -26,15 +26,9 @@
     </div>
     <div id="logo">Placeholder for logo</div> 
     <div id="nav-barR">
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="projects.html">Project 1</a></li>
-          <li><a class="dropdown-item" href="projects.html">Project 2</a></li>
-          <li><a class="dropdown-item" href="projects.html">Project 3</a></li>
-          <li><a class="dropdown-item" href="projects.html">Project 4</a></li>
-        </ul>
-      </div>
+      <button>
+        <a href="projects.html">Projects</a>
+      </button>
       <button>
       <a href="contact.html">Let's Chat</a>
       </button>
@@ -43,9 +37,6 @@
 
   <h2 id="Welcome"> Welcome!    
   <p>Ready for a journey?</p></h2>
-  
-
-
   
   <!--Mid section of the page-->
   <div class="mid-section">
@@ -114,17 +105,18 @@
   <div class="mini-nav2">
     <div id="visibility">
       <button id="mode">Dark Mode</button>
+    </div>     
+    <div class="btn-group dropup">
+      <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        Looking for something?
+      </button>
+      <ul class="dropdown-menu">
+        <!-- Dropdown menu links -->   
+        <a href="brand kit.html">Brand Kit</a> 
+      </ul>
     </div>
-    <div id="search-button">
-      <button id="looking">Looking for something?</button>
-      <button id="s-icon">🔍︎</button>  
-    </div>         
   </div>
 
-
-
-
-  
   <script src="script.js"></script>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
