--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="about me.html">About me</a>
       </button>
     </div>
-    <div id="logo">Placeholder for logo</div> 
+    <div><img id="logo"src="Screenshot_20250811_175833_Chrome.png"></div> 
     <div id="nav-barR">
       <button>
         <a href="projects.html">Projects</a>
