making more changes

--- a/index.html
+++ b/index.html
@@ -70,34 +70,19 @@
   
 
   <!--Bottom section of the page-->
-  <div class="card-group">
-    <div class="card">
-      <img src="https://i.pinimg.com/736x/ea/36/02/ea3602f22c0df7b1317456f7584459ef.jpg" class="card-img-top" alt="..."> <!--Placeholder Image-->
-      <div class="card-body">
-        <h5 class="card-title">Project 1: Placeholder Name😍</h5>
-        <p class="card-text">Small description of the project</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://i.pinimg.com/736x/9c/6b/81/9c6b81d16a164b1dd48e30c73de0c9fa.jpg" class="card-img-top" alt="..."> <!--Placeholder Image-->
-      <div class="card-body">
-        <h5 class="card-title">Project 2: Placeholder Name😍</h5>
-        <p class="card-text">Small description of the project</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://i.pinimg.com/736x/87/46/f9/8746f9646c0f5436e5bd5804f6a51a31.jpg" class="card-img-top" alt="..."> <!--Placeholder Image-->
-      <div class="card-body">
-        <h5 class="card-title">Project 3: Placeholder Name😍</h5>
-        <p class="card-text">Small description of the project</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://i.pinimg.com/736x/14/20/fd/1420fdb2c1b84a55bc9a61e3050b0fa5.jpg" class="card-img-top" alt="..."> <!--Placeholder Image-->
-      <div class="card-body">
-        <h5 class="card-title">Project 4: Placeholder Name😍</h5>
-        <p class="card-text">Small description of the project</p>
-      </div>
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Skills, Goals, and Interests</h5>
+      <h6 class="card-subtitle mb-2 text-body-secondary">Here's a quick summary of facts about me!</h6>
+      <p class="card-text">
+        <ul>
+          <li>Skills: Understanding of Java, HTML, CSS, and Javascript</li>
+          <li>Goals: Make a website which could help me stay on top of assignments to and productive during school.</li>
+          <li>Interests: Backend coding using Java, a growing interest for using HTML, CSS, and Javascript</li>
+        </ul>
+      </p>
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
     </div>
   </div>
   
